ROBE-214 mail refactor and async queue